# alphapack-v2

./: .clang-format  .gitignore  .style.yapf  CMakeLists.txt  Deps.cmake  README.md  cmake-format.json  requirements.txt
scripts/: bm_engine.py  bm_engine_bo.py  plot_bm_engine_result.py
src/: CMakeLists.txt  main.cc  main.py
src/alphapack/: __init__.py  policy_value_network.py
src/alphapack/bindings/: __init__.py
src/bindings/: CMakeLists.txt  bindings.cc
src/core/: CMakeLists.txt
src/core/mcts/: CMakeLists.txt  model_info.h
src/core/memory/: CMakeLists.txt  alloc_fn_utils.h  allocator.h  memory_block_pool.h  raw_buffer.h  storage_buffer.h  trivial_object_pool.h
src/core/state/: CMakeLists.txt  item.h  ndarray.h  serializer.h  state.cc  state.h
src/core/torch_utils/: CMakeLists.txt  allocator.h  inference_engine.cc  inference_engine.h  inference_model.cc  inference_model.h  memory.h
src/mcts/: CMakeLists.txt  item.h  model_info.h  ndarray.h  serializer.h  state.cc  state.h
src/tests/: CMakeLists.txt  bm_inference_engine.cc  test_ndarray.cc  test_state.cc
src/torch_utils/: CMakeLists.txt  alloc_fn_utils.h  inference_engine.cc  inference_engine.h  inference_model.cc  inference_model.h  memory_block_pool.h  memory_pool.h  raw_buffer.h
